--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^7.6.19",
+    "locomotive-scroll": "^4.1.4",
+    "node-sass": "^7.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
+    "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.5.3",
     "styled-components": "^5.3.6",
+    "tsparticles": "^2.6.0",
+    "tsparticles-slim": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
